@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addons>
-<addon id="plugin.video.xbmc-hockey-streams-frodo" name="XBMC Hockey Streams" version="3.1.8" provider-name="Craig McNicholas, Swedemon, actionbronson">
+<addon id="plugin.video.xbmc-hockey-streams-frodo" name="XBMC Hockey Streams" version="3.1.9" provider-name="Craig McNicholas, Swedemon, actionbronson">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 		<import addon="script.module.pil" version="1.1.7"/>
@@ -17,7 +17,7 @@
 	</extension>
 </addon>
 
-<addon id="plugin.video.xbmc-hockey-streams-gotham" name="XBMC Hockey Streams" version="3.1.8" provider-name="Craig McNicholas, Swedemon, actionbronson">
+<addon id="plugin.video.xbmc-hockey-streams-gotham" name="XBMC Hockey Streams" version="3.1.9" provider-name="Craig McNicholas, Swedemon, actionbronson">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
 		<import addon="script.module.pil" version="1.1.7"/>
