@@ -544,9 +544,9 @@ def dateOnDemandHighlights(session, date = None, team = None):
         lowQualitySrc = highlight['lowQualitySrc']
         medQualitySrc = highlight['medQualitySrc']
         highQualitySrc = highlight['highQualitySrc']
-        if medQualitySrc is not None and (highQualitySrc is None or highQualitySrc == ''):
-          nhlEventId,mp4 = [medQualitySrc.split('/')[i] for i in [-2,-1]]
-          highQualitySrc = 'http://nlds150.cdnl3nl.neulion.com/nlds_vod/nhl/vod/{0}/{1}/{2}/{3}/{4}'.format(year,month,day,nhlEventId,mp4.replace('1600','4500'))
+        #if medQualitySrc is not None and (highQualitySrc is None or highQualitySrc == ''):
+        #  nhlEventId,mp4 = [medQualitySrc.split('/')[i] for i in [-2,-1]]
+        #  highQualitySrc = 'http://nlds150.cdnl3nl.neulion.com/nlds_vod/nhl/vod/{0}/{1}/{2}/{3}/{4}'.format(year,month,day,nhlEventId,mp4.replace('1600','4500'))
         homeSrc = highlight['homeSrc']
         awaySrc = highlight['awaySrc']
         
